# Tambua

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.adoc  README.md  bldapp.sh  bldtfl.sh  build_tfl.sh  compiler_alternative.sh  conan_install.sh  conanfile.py  install.patch  readme.adoc  run.sh  tambua_macos.code-workspace  tambua_ubuntu.code-workspace
Applications/: CMakeLists.txt
Applications/ConsoleClassifier/: CMakeLists.txt
Applications/ConsoleClassifier/src/: main.cpp
Applications/QtClassifier/: CMakeLists.txt  resources.qrc
Applications/QtClassifier/components/: Form.qml  Main.qml
Applications/QtClassifier/include/: logic.h
Applications/QtClassifier/src/: logic.cpp  main.cpp
Assets/Documentation/: qt_installation_issues.adoc
Assets/Documentation/Conan_configuration/: conan.conf
Assets/Scripts/: build_preset.sh  install_preset.sh  install_qt_prereq.sh
Assets/conan_profiles/: linux-debug
Data/Documentation/: conan_compatibility_issue.adoc  qt_installation_issues.adoc  tflite_delegates.adoc
Data/Documentation/Conan_configuration/: settings.yml
Data/conan_profiles/: linux-release
Libraries/: CMakeLists.txt
Libraries/Classifier/: CMakeLists.txt
Libraries/Classifier/include/: classifier.h  helpers.h
Libraries/Classifier/src/: helpers.cpp  program.cpp
Scripts/: install_preset.sh  run_ubuntu.sh
conan/: ubuntu-gcc11-debug  ubuntu-gcc11-release
include/: bmp.h  helpers.h  log.h  program.h
src/: bmp.cpp  helpers.cpp  log.cpp  program.cpp
